Update deployment instructions, adjust image paths in README, add Docker deployment details, update activation guide, and include caution notes.